--- a/app/src/main/res/layout/fragment_contents.xml
+++ b/app/src/main/res/layout/fragment_contents.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.sundaydev.kakaoTest.viewmodel.ContentsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contents_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp"
+            app:spanCount="2"
+            defaultItemDecorator="@{@drawable/divider_space}"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
