--- a/app/src/main/res/layout/item_contents.xml
+++ b/app/src/main/res/layout/item_contents.xml
@@ -59,6 +59,7 @@
                 style="?android:progressBarStyleHorizontal"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:background="@drawable/background_progress"
                 android:indeterminate="false"
                 android:max="100"
                 android:progress="@{item.displayVote()}"
@@ -69,23 +70,39 @@
                 app:layout_constraintTop_toTopOf="@id/bottom_space" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/title"
-                style="@style/Body2"
+                android:id="@+id/vote_rate"
+                style="@style/Overline"
+                percentage="@{item.displayVote()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/rate"
+                app:layout_constraintEnd_toEndOf="@id/rate"
+                app:layout_constraintStart_toStartOf="@id/rate"
+                app:layout_constraintTop_toTopOf="@id/rate" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/title"
+                style="@style/Body2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:singleLine="true"
                 android:text="@{item.title}"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@id/guide_end"
                 app:layout_constraintStart_toEndOf="@id/guide_start"
                 app:layout_constraintTop_toBottomOf="@id/rate" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/date"
                 style="@style/Body2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:text="@{item.release_date}"
+                app:layout_constraintEnd_toStartOf="@id/guide_end"
                 app:layout_constraintStart_toEndOf="@id/guide_start"
                 app:layout_constraintTop_toBottomOf="@id/title" />
 
