--- a/app/src/main/res/layout/fragment_movie_contents.xml
+++ b/app/src/main/res/layout/fragment_movie_contents.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.sundaydev.kakaoTest.viewmodel.PeopleViewModel" />
+            type="com.sundaydev.kakaoTest.viewmodel.MovieContentsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,13 +13,14 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/people_recycler"
-            defaultItemDecorator="@{@drawable/divider_space}"
+            android:id="@+id/contents_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:padding="16dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2" />
+            app:spanCount="2"
+            defaultItemDecorator="@{@drawable/divider_space}"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
