--- a/app/src/main/res/layout/fragment_tv_contents.xml
+++ b/app/src/main/res/layout/fragment_tv_contents.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.sundaydev.kakaoTest.viewmodel.ContentsViewModel" />
+            type="com.sundaydev.kakaoTest.viewmodel.TvContentsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,13 +14,13 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contents_recycler"
+            defaultItemDecorator="@{@drawable/divider_space}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="16dp"
-            app:spanCount="2"
-            defaultItemDecorator="@{@drawable/divider_space}"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
