--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -15,7 +15,7 @@
     <fragment
         android:id="@+id/tvFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.TvFragment"
-        android:label="TvFragment">
+        android:label="@string/tv">
         <action
             android:id="@+id/action_tvFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/movieFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.MovieFragment"
-        android:label="MovieFragment">
+        android:label="@string/movie">
         <action
             android:id="@+id/action_movieFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
@@ -31,7 +31,7 @@
     <fragment
         android:id="@+id/peopleFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.PeopleFragment"
-        android:label="PeopleFragment">
+        android:label="@string/people">
         <action
             android:id="@+id/action_peopleFragment_to_peopleDetailFragment"
             app:destination="@id/peopleDetailFragment" />
@@ -39,7 +39,7 @@
     <fragment
         android:id="@+id/myInfoFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.MyInfoFragment"
-        android:label="MyInfoFragment" />
+        android:label="@string/my_page" />
     <fragment
         android:id="@+id/peopleDetailFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.PeopleDetailFragment"
