리스트 페이징 추가

--- a/app/src/main/res/layout/item_movie_contents.xml
+++ b/app/src/main/res/layout/item_movie_contents.xml
@@ -43,7 +43,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/poster"
-                loadPoster="@{item}"
+                loadImage="@{item.poster_path}"
                 android:layout_width="match_parent"
                 android:layout_height="260dp"
                 android:scaleType="fitXY"
