--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -43,7 +43,7 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/poster"
-            loadProfile="@{viewModel.detailData.poster_path}"
+            loadImage="@{viewModel.detailData.poster_path}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:foregroundGravity="left"
