--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -23,11 +23,7 @@
     <fragment
         android:id="@+id/movieFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.MovieFragment"
-        android:label="@string/movie">
-        <action
-            android:id="@+id/action_movieFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
-    </fragment>
+        android:label="@string/movie"/>
     <fragment
         android:id="@+id/peopleFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.PeopleFragment"
@@ -52,12 +48,22 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.sundaydev.kakaoTest.ui.frament.DetailFragment"
-        android:label="DetailFragment">
+        android:label="@string/movie_detail">
         <action
             android:id="@+id/action_detailFragment_to_peopleDetailFragment"
             app:destination="@id/peopleDetailFragment" />
         <argument
-            android:name="movie_id"
-            app:argType="integer" />
+            android:name="detailData"
+            app:argType="com.sundaydev.kakaoTest.data.MovieDetail"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieContentsFragment"
+        android:name="com.sundaydev.kakaoTest.ui.frament.MovieContentsFragment"
+        android:label="" >
+        <action
+            android:id="@+id/action_movieContentsFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
