--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.MainActivity">
 
+        <View
+            android:id="@+id/statusbar_space"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:background="?attr/colorPrimary"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -19,7 +26,7 @@
             android:background="?attr/colorPrimary"
             android:visibility="gone"
             app:elevation="0dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/statusbar_space"
             app:titleTextColor="@android:color/white" />
 
         <fragment
