- 배우정보 lazyVerticalGrid 사용 - paging3 적용

--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -26,7 +26,7 @@
         android:label="@string/movie"/>
     <fragment
         android:id="@+id/peopleFragment"
-        android:name="com.sundaydev.kakaoTest.ui.people.PeopleFragment"
+        android:name="com.sundaydev.kakaoTest.ui.people.PeopleListFragment"
         android:label="@string/people">
         <action
             android:id="@+id/action_peopleFragment_to_peopleDetailFragment"
