--- a/app/src/main/res/layout/widget_progress.xml
+++ b/app/src/main/res/layout/widget_progress.xml
@@ -10,10 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="48dp"
-        android:layout_height="48dp"
-        tools:showIn="@layout/item_movie_contents">
+        android:layout_height="48dp">
 
         <ProgressBar
             android:id="@+id/rate"
